tests/ui/error-codes/E0610.rs
fn main() {
    let x = 0;
    let _ = x.foo; //~ ERROR E0610
}
